crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__iri_reference_format_per_call_cache.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"format\":\"iri-reference\",\"type\":\"string\"}"
expression: code
---
struct Validator;
#[doc(hidden)]
#[allow(
    non_snake_case,
    dead_code,
    unused_imports,
    unused_variables,
    unreachable_code,
    clippy::all
)]
mod __validator_impl {
    use super::*;
    use jsonschema::__private::cmp as __cmp;
    use jsonschema::__private::content as __content;
    use jsonschema::__private::custom as __custom;
    use jsonschema::__private::error as __err;
    use jsonschema::__private::fancy_regex as __fancy;
    use jsonschema::__private::format as __fmt;
    use jsonschema::__private::numeric as __num;
    use jsonschema::__private::regex as __re;
    use jsonschema::__private::serde_json as __sj;
    use jsonschema::__private::types as __types;
    use jsonschema::__private::unique_items as __uniq;
    use jsonschema::__private::unfinished_matches as __unfinished;
    use jsonschema::paths as __paths;
    use jsonschema::JsonType as __JT;
    use jsonschema::JsonTypeSet as __JTS;
    use jsonschema::ErrorIterator as __EI;
    use jsonschema::ValidationError as __VE;
    use __sj::Value as __Value;
    use std::sync::LazyLock as __Lazy;
    type __Map = __sj::Map<String, __Value>;
    std::thread_local! {
        static __JSONSCHEMA_IRI_REFERENCE_FORMAT_CACHE : std::cell::RefCell <
        __fmt::Cache > = std::cell::RefCell::new(__fmt::Cache::default());
    }
    #[inline]
    fn __cached_iri_reference(s: &str) -> bool {
        __JSONSCHEMA_IRI_REFERENCE_FORMAT_CACHE
            .with_borrow_mut(|cache| {
                if let Some(&valid) = cache.get(s) {
                    return valid;
                }
                let valid = __fmt::is_valid_iri_reference(s);
                cache.insert(Box::from(s), valid);
                valid
            })
    }
    pub(super) fn is_valid(instance: &__Value) -> bool {
        __JSONSCHEMA_IRI_REFERENCE_FORMAT_CACHE.with_borrow_mut(|cache| cache.clear());
        match instance {
            __Value::String(s) => __cached_iri_reference(s),
            _ => false,
        }
    }
    pub(super) fn validate<'__i>(
        instance: &'__i __Value,
        __path: &__paths::LazyLocation,
    ) -> Option<__VE<'__i>> {
        __JSONSCHEMA_IRI_REFERENCE_FORMAT_CACHE.with_borrow_mut(|cache| cache.clear());
        match instance {
            __Value::String(s) => {
                if !(__cached_iri_reference(s)) {
                    return Some(
                        __err::format(
                            "/format",
                            __path.into(),
                            instance,
                            "iri-reference",
                        ),
                    );
                }
            }
            _ => {
                return Some(
                    __err::single_type("/type", __path.into(), instance, __JT::String),
                );
            }
        }
        None
    }
    pub(super) fn collect_errors<'__i>(
        instance: &'__i __Value,
        __path: &__paths::LazyLocation,
        __errors: &mut Vec<__VE<'__i>>,
    ) {
        __JSONSCHEMA_IRI_REFERENCE_FORMAT_CACHE.with_borrow_mut(|cache| cache.clear());
        match instance {
            __Value::String(s) => {
                __errors
                    .extend(
                        (|| -> Option<__VE<'_>> {
                            if !(__cached_iri_reference(s)) {
                                return Some(
                                    __err::format(
                                        "/format",
                                        __path.into(),
                                        instance,
                                        "iri-reference",
                                    ),
                                );
                            }
                            None
                        })(),
                    );
            }
            _ => {
                __errors
                    .push(
                        __err::single_type(
                            "/type",
                            __path.into(),
                            instance,
                            __JT::String,
                        ),
                    );
            }
        }
    }
    pub(super) fn run_is_valid(instance: &__Value) -> bool {
        is_valid(instance)
    }
    pub(super) fn run_validate<'__i>(instance: &'__i __Value) -> Option<__VE<'__i>> {
        validate(instance, &__paths::LazyLocation::new())
    }
    pub(super) fn run_collect_errors<'__i>(instance: &'__i __Value) -> Vec<__VE<'__i>> {
        let mut errors = Vec::new();
        collect_errors(instance, &__paths::LazyLocation::new(), &mut errors);
        errors
    }
    pub(super) fn entry_is_valid(instance: &__Value) -> bool {
        run_is_valid(instance)
    }
    pub(super) fn entry_validate<'__i>(
        instance: &'__i __Value,
    ) -> ::std::result::Result<(), __VE<'__i>> {
        match run_validate(instance) {
            Some(e) => Err(e),
            None => Ok(()),
        }
    }
    pub(super) fn entry_iter_errors<'__i>(instance: &'__i __Value) -> __EI<'__i> {
        __err::iterator_from(run_collect_errors(instance))
    }
}
impl Validator {
    pub fn is_valid(instance: &jsonschema::__private::serde_json::Value) -> bool {
        __validator_impl::entry_is_valid(instance)
    }
    pub fn validate<'__i>(
        instance: &'__i jsonschema::__private::serde_json::Value,
    ) -> ::std::result::Result<(), jsonschema::ValidationError<'__i>> {
        __validator_impl::entry_validate(instance)
    }
    pub fn iter_errors<'__i>(
        instance: &'__i jsonschema::__private::serde_json::Value,
    ) -> jsonschema::ErrorIterator<'__i> {
        __validator_impl::entry_iter_errors(instance)
    }
}
