crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__items_any_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"anyOf\":[{\"prefixItems\":[{}]},{\"prefixItems\":[{},{}]}],\"type\":\"array\",\"unevaluatedItems\":false}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => {
                arr.iter()
                    .enumerate()
                    .all(|(idx, item)| {
                        if (true && (idx < 1usize) || true && (idx < 2usize)) {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        }
