crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__items_empty_schema.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"items\":{},\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => true,
            _ => false,
        }
