crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__items_if_bool.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"if\":true,\"then\":{\"prefixItems\":[{}]},\"type\":\"array\",\"unevaluatedItems\":false}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                arr.iter()
                    .enumerate()
                    .all(|(idx, item)| {
                        if if true { (false) || (idx < 1usize) } else { false } {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        }
