crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__items_if_then_else.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"else\":{\"prefixItems\":[{}]},\"if\":{\"prefixItems\":[{\"const\":0}]},\"then\":{\"prefixItems\":[{},{}]},\"type\":\"array\",\"unevaluatedItems\":false}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => {
                let __guard_0 = (|instance: &__Value| match instance {
                    __Value::Array(arr) => {
                        arr.get(0usize)
                            .map_or(
                                true,
                                |instance| {
                                    static EXPECTED: __Lazy<__sj::Number> = __Lazy::new(|| {
                                        __sj::from_str("0").expect("Failed to parse const number")
                                    });
                                    match instance {
                                        __Value::Number(n) => __cmp::equal_numbers(n, &*EXPECTED),
                                        _ => false,
                                    }
                                },
                            )
                    }
                    _ => true,
                })(instance);
                arr.iter()
                    .enumerate()
                    .all(|(idx, item)| {
                        if if __guard_0 {
                            (idx < 1usize) || (idx < 2usize)
                        } else {
                            idx < 1usize
                        } {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        }
