crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__items_one_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"prefixItems\":[{\"const\":1}]},{\"prefixItems\":[{\"const\":2},{}]}],\"type\":\"array\",\"unevaluatedItems\":false}"
expression: is_valid_body(schema)
---
(match instance {
            __Value::Array(arr) => {
                let __guard_0 = (|instance: &__Value| match instance {
                    __Value::Array(arr) => {
                        arr.get(0usize)
                            .map_or(
                                true,
                                |instance| {
                                    static EXPECTED: __Lazy<__sj::Number> = __Lazy::new(|| {
                                        __sj::from_str("1").expect("Failed to parse const number")
                                    });
                                    match instance {
                                        __Value::Number(n) => __cmp::equal_numbers(n, &*EXPECTED),
                                        _ => false,
                                    }
                                },
                            )
                    }
                    _ => true,
                })(instance);
                let __guard_1 = (|instance: &__Value| match instance {
                    __Value::Array(arr) => {
                        arr.get(0usize)
                            .map_or(
                                true,
                                |instance| {
                                    static EXPECTED: __Lazy<__sj::Number> = __Lazy::new(|| {
                                        __sj::from_str("2").expect("Failed to parse const number")
                                    });
                                    match instance {
                                        __Value::Number(n) => __cmp::equal_numbers(n, &*EXPECTED),
                                        _ => false,
                                    }
                                },
                            )
                    }
                    _ => true,
                })(instance);
                let __one_of_matches_0 = (__guard_0 as usize) + (__guard_1 as usize);
                arr.iter()
                    .enumerate()
                    .all(|(idx, item)| {
                        if __one_of_matches_0 == 1
                            && ((__guard_0 && (idx < 1usize))
                                || (__guard_1 && (idx < 2usize)))
                        {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        })
            && ({
                let mut matched = is_branch_valid_0(instance);
                (if is_branch_valid_1(instance) {
                    if matched {
                        false
                    } else {
                        matched = true;
                        true
                    }
                } else {
                    true
                }) && matched
            })
