crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__items_schema.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"items\":{\"type\":\"string\"},\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => arr.iter().all(|instance| instance.is_string()),
            _ => false,
        }
